--- a/src/app/dasboardnav/dasboardnav.component.html
+++ b/src/app/dasboardnav/dasboardnav.component.html
@@ -1,13 +1,13 @@
-<!-- <div style="position: fixed; top: 0; z-index: 100; width: 100%;">
+<div style="position: fixed; top: 0; z-index: 100; width: 100%;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand text-success fw-bolder" href="#">Student Dashboard</a>
+        <a class="navbar-brand text-success fw-bolder" href="#">Customer Dashboard</a>
   
   
         <div class="d-flex ms-auto align-items-center">
      
-          <img [src]="profileImage ? profileImage : 'https://img.icons8.com/?size=50&id=12438&format=png'"  alt="Profile Picture" class="rounded-circle" width="40" height="40">
-          <span class="ms-2">{{studentdetails.fullname}}</span>
+       
+          
   
   
           <button class="navbar-toggler ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,24 +18,16 @@
      
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
+            
+           
             <li class="nav-item">
-              <a class="nav-link" routerLink="viewclassmates">View classmates</a>
+              <a class="nav-link" routerLink="/createpin">Create transfer pin</a>
             </li>
+
             <li class="nav-item">
-              <a class="nav-link" routerLink="changepassword">Change Password</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="addcourses">Register courses</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="editprofile">Edit profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="notekeep">Note Keep</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="uploadrecipt">Upload Recipt</a>
-            </li>
+                <a class="nav-link" routerLink="/deposit">Deposit</a>
+              </li>
+
             <li class="nav-item">
               <button (click)="signout()" class="btn btn-outline-danger">Sign Out</button>
             </li>
@@ -44,4 +36,4 @@
       </div>
     </nav>
   </div>
-   -->
+  
